@@ -465,12 +465,13 @@ function toggleAllFiles(tb) {
 	var ea = document.getElementsByName("file"); 
 	for (var i=0; i<ea.length; i++) if (!ea[i].disabled) ea[i].click();
 }
-function setCookie(name,value,e) { 
+function setCookie(name,value,e,path) { 
 	var expires;
 	var date = new Date();
 	date.setTime(date.getTime() + 315360000000);
 	expires = date.toGMTString();
-	document.cookie = name + '=' + escape(value) + ';'+ (e?'expires='+expires+'; ':'') +' path=/; secure;'; 
+	if (!path) path = '/';
+	document.cookie = name + '=' + escape(value) + ';'+ (e?'expires='+expires+'; ':'') +' path='+path+'; secure;'; 
 }
 function delCookie(name) {
 	var date = new Date();
@@ -806,4 +807,31 @@ function setAutoRefresh(seconds) {
 		autorefreshinterval = window.setInterval("window.location.reload()",1000 * seconds);
 	}		
 	setCookie('autorefresh',seconds,1);
+}
+function applyFilters() {
+	var els = document.getElementsByName('filter.types');
+	var typefilter = "";
+	var path = false;
+	for (var i=0; i<els.length; i++) {
+		if (els[i].checked) typefilter+=els[i].value;
+	}
+	setCookie('filter.types', typefilter, 1, path ? window.location.pathname : 0);
+
+	els = document.getElementsByName('filter.size.op');
+	var sizeop = els[0].value;
+	els = document.getElementsByName('filter.size.val');
+	var sizeval = els[0].value;
+	els = document.getElementsByName('filter.size.unit');
+	var sizeunit = els[0].value;
+
+	setCookie('filter.size', sizeop+sizeval+sizeunit, 1, path ? window.location.pathname : 0);
+
+	window.location.reload();
+	return 0;
+}
+function resetFilters() {
+	var cookies = new Array('filter.size','filter.time','filter.types');
+	for (var i=0; i<cookies.length; i++) delCookie(cookies[i]);
+	window.location.reload();
+	return 0;
 }
